--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <!-- PIL Card 6 -->
                     <div class="pil-card">
                         <div class="pil-status status-process">Hearing</div>
-                        <h4>Arravali Hills Protection</h4>
+                        <h4>Aravali Hills Protection</h4>
                         <p class="pil-desc">Petition against illegal mining and construction activities threatening the
                             Arravali biodiversity.</p>
                         <div class="pil-meta">
