--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     shaping a better India.</p>
                 <div class="hero-buttons">
                     <a href="login.html" class="btn-primary">File a PIL Now</a>
-                    <a href="#" class="btn-secondary">Learn More</a>
+                    <a href="learn.html" class="btn-secondary">Learn More</a>
                 </div>
             </div>
         </section>
