--- a/learn.html
+++ b/learn.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-red: #a30000;
+            --primary-red: #a23333;
             --secondary-red: #fde8e8;
             --accent-red: #800000;
             --text-dark: #333333;
@@ -50,11 +50,13 @@
         .logo {
             display: flex;
             align-items: center;
-            gap: 15px;
         }
         .logo-img {
-            height: 40px;
-            width: 40px;
+            height: 70px;
+            width: auto;
+            border-radius: 50%;
+            margin-right: 8px;
+            display: block;
         }
         .logo h1 {
             font-size: 1.5rem;
@@ -217,8 +219,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="logo.png" alt="PIL India Logo" class="logo-img">
-                <h1>PIL INDIA</h1>
+                <img src="C:\Users\ASUS\OneDrive\Desktop\JanVichar\Maroon and Gold Elegant Law Firm Logo_20260213_143524_0000.png" alt="PIL India Logo" class="logo-img">
+                <h1>JanVichar</h1>
             </div>
             <nav>
                 <ul>
