--- a/learn.html
+++ b/learn.html
@@ -219,7 +219,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="C:\Users\ASUS\OneDrive\Desktop\JanVichar\Maroon and Gold Elegant Law Firm Logo_20260213_143524_0000.png" alt="PIL India Logo" class="logo-img">
+                <img src="Maroon and Gold Elegant Law Firm Logo_20260213_143524_0000.png"alt="PIL India Logo" class="logo-img">
                 <h1>JanVichar</h1>
             </div>
             <nav>
